# ruci

./: .gitattributes  .gitignore  .ruci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
contrib/: docker-compose.yml  install.sh  ruci.yaml.example  rucid.service
contrib/docker/: Dockerfile  entrypoint.sh
contrib/examples/: build-and-test.ruci.yml  docker-build-push.ruci.yml  multi-context.ruci.yml  vcs-checkout.ruci.yml  webhook-deploy.ruci.yml
docs/: API.md  DEPLOY.md  DESIGN.md
ruci/: Cargo.toml
ruci-core/: Cargo.toml
ruci-core/src/: archive.rs  auth.rs  config.rs  error.rs  executor.rs  lib.rs  metrics.rs  queue.rs  rpc.rs  storage.rs  trigger.rs  vcs.rs
ruci-core/src/db/: mod.rs  mysql.rs  postgres.rs  repository.rs  sqlite.rs
ruci-core/tests/: integration.rs
ruci-protocol/: Cargo.toml
ruci-protocol/src/: lib.rs  protocol_types.rs
ruci/src/: main.rs
rucid/: Cargo.toml
rucid/src/: main.rs
rucid/src/web/: handlers.rs  mod.rs  webhooks.rs
