[workspace]
resolver = "2"
members = [
    "ruci",
    "rucid",
    "ruci-core",
    "ruci-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ruci Team"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gnuos/ruci"
repository = "https://github.com/gnuos/ruci"
description = "A lightweight CI system written in Rust"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# RPC
tarpc = { version = "0.37", features = ["tokio1", "serde-transport", "serde-transport-json"] }

# Web
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Storage
aws-sdk-s3 = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Time
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"
cron = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hash
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"

# Utilities
flume = "0.11"
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"

# Metrics
prometheus-client = "0.22"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
