[package]
name = "ruci-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[features]
full = ["sqlite", "postgres", "mysql", "s3"]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
s3 = ["dep:rusty-s3", "dep:reqwest"]

[dependencies]
# Internal
ruci-protocol = { workspace = true }

# Async
tokio = { workspace = true }
futures.workspace = true
async-trait = { workspace = true }
flume.workspace = true

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }

# Storage (S3 is optional)
rusty-s3 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

# Time
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }
cron = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hash
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Utilities
uuid = { workspace = true }
url = "2"
once_cell = { workspace = true }
parking_lot = { workspace = true }
bytes = { workspace = true }
tokio-serde = { workspace = true }
tarpc = { workspace = true, features = ["full", "serde-transport", "tcp", "unix"] }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "migrate", "runtime-tokio", "chrono"] }

# Auth
argon2 = { workspace = true }
password-hash = { workspace = true }
rand_core = { workspace = true }

# Metrics
prometheus-client = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-tar = { workspace = true }
