[package]
name = "ruci"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "ruci"
path = "src/main.rs"

[features]
default = []
s3 = ["ruci-core/s3"]
postgres = ["ruci-core/postgres"]
mysql = ["ruci-core/mysql"]

[dependencies]
# Internal
ruci-protocol = { workspace = true }
ruci-core = { workspace = true }

# Async
tokio = { workspace = true }
futures.workspace = true

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
bytes = { workspace = true }
flume.workspace = true
tarpc = { workspace = true, features = ["serde-transport", "tcp", "unix"] }
