[package]
name = "rucid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "rucid"
path = "src/main.rs"

[dependencies]
# Internal
ruci-core = { workspace = true }
ruci-protocol = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Web
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# Error handling
anyhow = { workspace = true }
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true

# Metrics
prometheus-client = { workspace = true }

# Utilities
uuid = { workspace = true, features = ["v4", "serde"] }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
